# visualkey

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: make-installer.yml
csharp/: Audio.cs  Camera.cs  Graphics.cs  Input.cs  Math.cs  Shader.cs  Texture.cs  Time.cs  Window.cs
src/: CMakeLists.txt  audio.cc  audio.h  icon.h  image.cc  image.h  iomanager.cc  iomanager.h  light.cc  light.h  mesh.cc  mesh.h  mono_script.cc  mono_script.h  shader.cc  shader.h  text.cc  text.h  typedefs.h  utils.cc  utils.h  visualkey.cc  window.cc  window.h
template/: App.cs  gitignore  template.csproj
template/.run/: VisualKey.run.xml
third/: CMakeLists.txt
third/glad/: glad.c  glad.h
