file(GLOB_RECURSE VISUALKEY_THIRD_SOURCES
  glad/glad.c
)

set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_INSTALL OFF CACHE BOOL "" FORCE)
add_subdirectory(glfw)

set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
set(BUILD_STATIC_LIBS OFF CACHE BOOL "" FORCE)
set(GLM_TEST_ENABLE OFF CACHE BOOL "" FORCE)
add_subdirectory(glm)

set(SKIP_INSTALL_ALL OFF CACHE BOOL "" FORCE)
add_subdirectory(freetype)

set(VISUALKEY_SOURCES ${VISUALKEY_SOURCES} ${VISUALKEY_THIRD_SOURCES} PARENT_SCOPE)
